[tool.poetry]
name = "easydevbadge"
version = "0.1.0"
description = "simple active developer badge solution"
authors = ["Aaron <57018940+0dm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
py-cord = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
